# State.io

./: .README.md.swp  README.md
state.io/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  scores.txt  state
state.io/musics/: license.txt
state.io/savings/: game_details.txt  gdnbhg.txt  haemd.txt  hamed.txt  jh.txt  kjhk.txt  mamad.txt
state.io/src/: ai.c  game.c  globals.h  login.c  main.c  map.c  map_choosing.c  menu.c
